--- a/components/NavBar/styles.scss
+++ b/components/NavBar/styles.scss
@@ -8,13 +8,25 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-top: 1px solid #eeeeee;
 }
 
 .link{
   margin: 0 auto;
   cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  width: 25vw;
 }
 
 .icon{
-  height: 32px;
+  height: 28px;
+}
+
+.description{
+  font-size: 10px;
+  display: block;
+  text-align: center;
+  color: #000000;
+  overflow: hidden;
 }
