--- a/lib/shared.scss
+++ b/lib/shared.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700");
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -16,6 +18,8 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
+	font-family: 'Lato', sans-serif;
+	font-weight: 400;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -43,6 +47,5 @@ table {
 }
 
 body{
-	background: #e7eff6;
-	height: 1000000px;
+	background: #f3f3f3;
 }
