--- a/components/Header/styles.scss
+++ b/components/Header/styles.scss
@@ -1,56 +1,39 @@
 .headerContainer{
   width: 100%;
-  height: 50px;
-  background: #ffffff;
-  position: fixed;
-  border-bottom: 1px solid #eeeeee;
-  left: 0;
-  top: 0;
+  height: 165px;
+  background: #124469;
+  padding: 20px 13px;
+  box-sizing: border-box;
+  margin-bottom: -100px;
 }
 
 .header{
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  max-width: 1100px;
-  margin: 0 auto;
-  height: 100%;
+}
+
+.logoContainer{
+  cursor: pointer;
 }
 
 .logo{
   height: 40px;
-  margin: 5px 0 5px 12px;
-  border-radius: 100%;
-  background: white;
-  box-sizing: border-box;
   cursor: pointer;
-}
-
-.homeLink{
-  height: 100%;
-  z-index: 1;
-}
-
-.logOut{
-  color: #000000;
-  background: #ffffff;
-  border: none;
-  border-radius: 5px;
-  height: 30px;
   margin-right: 10px;
-  cursor: pointer;
-  z-index: 1;
+  fill: #ffffff;
 }
 
-.pageTitleContainer{
-  position: absolute;
-  width: 100vw;
-  text-align: center;
+.menuIconContainer{
+  margin-left: auto;
+  background: none;
+  border: none;
+}
+
+.menuIcon{
+  stroke: #ffffff;
 }
 
 .pageTitle{
-  text-align: center;
-  max-width: 33vw;
-  overflow:hidden;
+  font-size: 36px;
+  font-weight: 900;
+  color: #ffffff;
 }
