--- a/components/ProjectCard/styles.scss
+++ b/components/ProjectCard/styles.scss
@@ -1,27 +1,55 @@
+$likes-size: 50px;
+
 .container {
-  margin: 10px 5px;
+  margin: 13px 13px 20px;
   display: block;
   background: #ffffff;
   border-radius: 5px;
-  box-shadow: 0 1px 6px rgba(50, 50, 50, 0.15);
+  box-shadow: 0 2px 14px rgba(0,0,0, 0.14);
   text-decoration: none;
   word-break:break-all;
 }
 
 .card{
-  padding: 10px;
+  padding: 13px;
   color: black;
 }
 
-.owner, .name{
+.firstLine, .secondLine{
   display: block;
 }
 
-.name{
-  font-size: 25px;
+.firstLine{
+  margin-bottom: 8px;
 }
 
-.owner{
-  margin-top: 10px;
+.firstLineContents{
+  display: flex;
+}
+
+.name{
+  font-size: 21px;
+  font-weight: 700;
+  word-break: break-word;
+  width: calc(100% - #{$likes-size});
+}
+
+.likes{
+  width: $likes-size;
+  margin-left: auto;
+  text-align: right;
+  color: #6E6E6E;
   font-size: 15px;
+  line-height: 20px;
+}
+
+.heart{
+  margin-left: 6px;
+  stroke: #6E6E6E;
+}
+
+.secondLine{
+  margin-bottom: 3px;
+  font-size: 14px;
+  color: #6E6E6E;
 }
