--- a/lib/shared.scss
+++ b/lib/shared.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900");
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -47,5 +47,5 @@ table {
 }
 
 body{
-	background: #f3f3f3;
+	background: #F8F9FC;
 }
