--- a/components/Header/styles.scss
+++ b/components/Header/styles.scss
@@ -37,3 +37,37 @@
   font-weight: 900;
   color: #ffffff;
 }
+
+.closeIcon{
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  fill: #124469;
+}
+
+.sideMenu{
+  position: absolute;
+  padding: 3px 10px;
+  height: 100%;
+  top: 0;
+  right: 0;
+  width: 75vw;
+  box-sizing: border-box;
+  margin-right: -75vw;
+  background: #ffffff;
+  transition: 0.3s;
+  box-shadow: 0 2px 14px rgba(0,0,0, 0.14);
+}
+
+.openMenu{
+  margin-right: 0;
+}
+
+.menuButton{
+  display: block;
+  width: 100%;
+  font-size: 20px;
+  font-weight: 700;
+  text-align: right;
+  padding: 30px;
+}
