--- a/lib/shared.scss
+++ b/lib/shared.scss
@@ -21,6 +21,7 @@ time, mark, audio, video {
 	font-family: 'Lato', sans-serif;
 	font-weight: 400;
 	vertical-align: baseline;
+	word-break: break-word;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -44,6 +45,13 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+button{
+	padding: 0;
+	margin: 0;
+	background: none;
+	border: none;
 }
 
 body{
