--- a/components/Header/styles.scss
+++ b/components/Header/styles.scss
@@ -57,6 +57,7 @@
   background: #ffffff;
   transition: 0.3s;
   box-shadow: 0 2px 14px rgba(0,0,0, 0.14);
+  z-index: 1;
 }
 
 .openMenu{
@@ -65,9 +66,8 @@
 
 .menuButton{
   display: block;
-  width: 100%;
   font-size: 20px;
   font-weight: 700;
   text-align: right;
-  padding: 30px;
+  margin: 30px 0 0 auto;
 }
