--- a/components/Header/styles.scss
+++ b/components/Header/styles.scss
@@ -26,6 +26,7 @@
   margin-left: auto;
   background: none;
   border: none;
+  cursor: pointer;
 }
 
 .menuIcon{
@@ -70,4 +71,5 @@
   font-weight: 700;
   text-align: right;
   margin: 30px 0 0 auto;
+  cursor: pointer;
 }
