--- a/components/SetupForm/styles.scss
+++ b/components/SetupForm/styles.scss
@@ -9,11 +9,9 @@
   display: block;
   margin: 0 auto 30px auto;
   width: 250px;
-  border-bottom: 1px solid #d2d2d2;
-}
-
-.icon{
-  stroke: #5a5a5a;
+  p{
+    margin-bottom: 10px;
+  }
 }
 
 .error{
@@ -33,12 +31,17 @@
   color: #d83939;
 }
 
-.field{
+.bioTextArea{
+  resize: none;
   display: inline;
   color: #5a5a5a;
   border: none;
   font-size: 16px;
-  padding: 12px 14px;
+  background: #f1f1f1;
+  width: 100%;
+  height: 110px;
+  padding: 10px;
+  box-sizing: border-box;
   &:placeholder{
     color: #5a5a5a;
   }
@@ -57,15 +60,4 @@
   font-size: 16px;
   background: #205782;
   cursor: pointer;
-}
-
-.logInText{
-  display: block;
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.link{
-  color: #205782;
-  text-decoration: none;
 }
