--- a/components/SkillBubble/styles.scss
+++ b/components/SkillBubble/styles.scss
@@ -8,6 +8,13 @@
   margin: 6px 5px 0 -1px;
 }
 
+.button{
+  &:focus{
+    outline: none;
+  }
+  cursor: pointer;
+}
+
 .id-1{
   background-color: #5F8A8A;
 }
