Fixed minor bugs

--- a/lib/shared.scss
+++ b/lib/shared.scss
@@ -54,8 +54,15 @@ button{
 	border: none;
 }
 
+button, a{
+	&:focus{
+		outline: none;
+	}
+}
+
 body{
 	background: #F8F9FC;
+	overflow: hidden;
 }
 
 :global(.geosuggest__suggests--hidden) {
