--- a/components/ProjectSummary/styles.scss
+++ b/components/ProjectSummary/styles.scss
@@ -52,3 +52,16 @@
   float: right;
   margin-right: 0;
 }
+
+.contactButton{
+  width: 240px;
+  padding: 16px 0;
+  color: #F8F9FC;
+  font-weight: 700;
+  font-size: 16px;
+  background: #205782;
+  cursor: pointer;
+  border-radius: 30px;
+  margin: 0 auto;
+  display: block;
+}
