--- a/components/ProjectCard/styles.scss
+++ b/components/ProjectCard/styles.scss
@@ -16,6 +16,13 @@ $likes-size: 50px;
   display: flex;
 }
 
+.lookingFor{
+  font-size: 12px;
+  margin: 10px 0 3px;
+  font-weight: 600;
+  color: #313131;
+}
+
 .name{
   font-size: 21px;
   font-weight: 700;
