--- a/components/Header/styles.scss
+++ b/components/Header/styles.scss
@@ -58,9 +58,11 @@
   transition: 0.3s;
   box-shadow: 0 2px 14px rgba(0,0,0, 0.14);
   z-index: 1;
+  display: none;
 }
 
 .openMenu{
+  display: block;
   margin-right: 0;
 }
 
