--- a/components/NavigationWrapper/styles.scss
+++ b/components/NavigationWrapper/styles.scss
@@ -2,3 +2,14 @@
   width: 100%;
   margin-bottom: 60px;
 }
+
+.container{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
+  padding: 71px 0 51px 0;
+  z-index: -1;
+}
