--- a/components/ConversationCard/styles.scss
+++ b/components/ConversationCard/styles.scss
@@ -19,3 +19,19 @@
   font-size: 12px;
   color: #6E6E6E;
 }
+
+.unreadBubble{
+  background: #d83939;
+  border-radius: 100%;
+  position: relative;
+  float: right;
+  height: 16px;
+  width: 16px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 16px;
+  color: #ffffff;
+  top: -20px;
+  right: -20px;
+  margin-left: -16px;
+}
