--- a/components/SkillBubble/styles.scss
+++ b/components/SkillBubble/styles.scss
@@ -4,7 +4,7 @@
   display: inline-block;
   border-radius: 13px;
   padding: 3px 8px;
-  color: #ffffff;
+  color: #333333;
   margin: 6px 5px 0 -1px;
 }
 
@@ -16,17 +16,97 @@
 }
 
 .id-1{
-  background-color: #5F8A8A;
+  background-color: #49c9e3
 }
 
 .id-2{
-  background-color: #B34D6C;
+  background-color: #fe88a3
 }
 
 .id-3{
-  background-color: #373291;
+  background-color: #fbda00
 }
 
 .id-4{
-  background-color: #C87D4A;
+  background-color: #6190de
+}
+
+.id-5{
+  background-color: #adf29d
+}
+
+.id-6{
+  background-color: #ff6384
+}
+
+.id-7{
+  background-color: #c0a1e4
+}
+
+.id-8{
+  background-color: #b3c9f0
+}
+
+.id-9{
+  background-color: #6897bb
+}
+
+.id-10{
+  background-color: #baf7d1
+}
+
+.id-11{
+  background-color: #febac1
+}
+
+.id-12{
+  background-color: #fef65b
+}
+
+.id-13{
+  background-color: #66cccc
+}
+
+.id-14{
+  background-color: #686ded
+}
+
+.id-15{
+  background-color: #a3d0ff
+}
+
+.id-16{
+  background-color: #59c988
+}
+
+.id-17{
+  background-color: #fe88a3
+}
+
+.id-18{
+  background-color: #6C8EBB
+}
+
+.id-19{
+  background-color: #FE9511
+}
+
+.id-20{
+  background-color: #F5D1A0
+}
+
+.id-21{
+  background-color: #ff6384
+}
+
+.id-22{
+  background-color: #479F5F
+}
+
+.id-23{
+  background-color: #66cccc
+}
+
+.id-24{
+  background-color: #6190de
 }
