--- a/components/Header/styles.scss
+++ b/components/Header/styles.scss
@@ -1,7 +1,7 @@
 .headerContainer{
   width: 100%;
   height: 70px;
-  background: #124469;
+  background: #2D309B;
   padding: 15px 13px;
   box-sizing: border-box;
 }
