--- a/components/SkillsSelector/styles.scss
+++ b/components/SkillsSelector/styles.scss
@@ -19,6 +19,8 @@
   position: absolute;
   background: #ffffff;
   width: 100%;
+  max-height: 150px;
+  overflow: scroll;
 }
 
 .suggestionHighlighted{
